# ITEA-CPP-ADV

./: README.md
L1/Palindrome/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Palindrome.pro  polindrom.txt
L1/QMake/Widgets/Palindrome/: Palindrome.pro  main.cpp
L2/PalindromeWithThreads/: MainWindow.cpp  MainWindow.h  PalindromeWithThreads.pro
L2/PalindromeWithThreads/PalindromeWithThreadsLib/include/: PalindromeResolver.h
